k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory-service
  labels:
    name: inventory-service
