k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
